--- a/Italy2.html
+++ b/Italy2.html
@@ -97,7 +97,7 @@
 				<a id="Link" href="index.html">
 					<--Return To Home
 				</a>
-				<a id="Link2" href="germany.html">
+				<a id="Link2" href="Germany.html">
 					Germany-->
 				</a>
 	</div>
