--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="italy.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@300&family=Kdam+Thmor+Pro&family=Rokkitt:wght@300&display=swap" rel="stylesheet">
 	<title>Travel Guide</title>
 
 
@@ -33,7 +30,7 @@
 							</a>
 					</li>
 					<li class="btn">
-							<a href="germany.html">
+							<a href="Germany.html">
 								Germany
 							</a>
 					</li>
@@ -53,7 +50,7 @@
 		</div>
 			<div id="links">
 					<a id="link" href="Italy2.html">Italy</a>
-					<a id="link2" href="germany.html">Germany</a>
+					<a id="link2" href="Germany.html">Germany</a>
 			</div>
 
 	</section>
